Extended problem for lab4

--- a/lab4/sas_plan.2
+++ b/lab4/sas_plan.2
@@ -1,21 +1,28 @@
 (load packet2 truck3 office3)
+(load packet3 truck3 office3)
 (drive truck3 office3 trainstation3 city3)
 (unload packet2 truck3 trainstation3)
+(unload packet3 truck3 trainstation3)
+(fly airplane1 airport1 airport15)
+(load packet1 airplane1 airport15)
 (rail train1 trainstation1 trainstation3)
 (load packet2 train1 trainstation3)
+(load packet3 train1 trainstation3)
 (rail train1 trainstation3 trainstation1)
 (unload packet2 train1 trainstation1)
-(drive truck1 airport1 office1 city1)
-(load packet1 truck1 office1)
-(drive truck1 office1 airport1 city1)
-(unload packet1 truck1 airport1)
-(load packet1 airplane1 airport1)
+(unload packet3 train1 trainstation1)
 (drive truck1 airport1 trainstation1 city1)
 (load packet2 truck1 trainstation1)
+(load packet3 truck1 trainstation1)
 (drive truck1 trainstation1 airport1 city1)
 (unload packet2 truck1 airport1)
+(unload packet3 truck1 airport1)
+(fly airplane1 airport15 airport1)
 (load packet2 airplane1 airport1)
-(fly airplane1 airport1 airport2)
+(load packet3 airplane1 airport1)
+(fly airplane1 airport1 airport15)
+(unload packet3 airplane1 airport15)
+(fly airplane1 airport15 airport2)
 (unload packet1 airplane1 airport2)
 (unload packet2 airplane1 airport2)
 (load packet1 truck2 airport2)
